[package]
name = "moxi"
version = "0.1.0"
edition = "2024"

[dependencies]
cortex-m = { version = "0.7.7" }
cortex-m-rt = "0.7.5"
defmt = "1.0.1"
defmt-rtt = "1.0.0"
embassy-executor = { version = "0.7.0", features = [
    "arch-cortex-m",
    "defmt",
    "executor-thread",
    "task-arena-size-16384",
] }
embassy-time = { version = "0.4.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
libscd = { version = "0.5.0", features = ["scd4x", "async", "defmt"] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
microbit-bsp = { version = "0.4.0", features = ["trouble"] }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
heapless = { version = "0.8.0", features = ["defmt-03"] }
static_cell = "2.1.0"
trouble-host = { version = "0.2.0", features = ["defmt"] }
embassy-futures = { version = "0.1.1", features = ["defmt"] }
